tests/ui/on-unimplemented/bad-annotation.stderr
error: malformed `rustc_on_unimplemented` attribute input
  --> $DIR/bad-annotation.rs:15:1
   |
LL | #[rustc_on_unimplemented]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[rustc_on_unimplemented = "message"]
   |                          +++++++++++
LL | #[rustc_on_unimplemented(/*opt*/ message = "...", /*opt*/ label = "...", /*opt*/ note = "...")]
   |                         ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0230]: cannot find parameter C on this trait
  --> $DIR/bad-annotation.rs:19:90
   |
LL | #[rustc_on_unimplemented = "Unimplemented trait error on `{Self}` with params `<{A},{B},{C}>`"]
   |                                                                                          ^

error[E0231]: positional format arguments are not allowed here
  --> $DIR/bad-annotation.rs:23:90
   |
LL | #[rustc_on_unimplemented = "Unimplemented trait error on `{Self}` with params `<{A},{B},{}>`"]
   |                                                                                          ^

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:27:26
   |
LL | #[rustc_on_unimplemented(lorem = "")]
   |                          ^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:31:26
   |
LL | #[rustc_on_unimplemented(lorem(ipsum(dolor)))]
   |                          ^^^^^^^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:35:41
   |
LL | #[rustc_on_unimplemented(message = "x", message = "y")]
   |                                         ^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:39:41
   |
LL | #[rustc_on_unimplemented(message = "x", on(desugared, message = "y"))]
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error[E0232]: empty `on`-clause in `#[rustc_on_unimplemented]`
  --> $DIR/bad-annotation.rs:43:26
   |
LL | #[rustc_on_unimplemented(on(), message = "y")]
   |                          ^^^^ empty on-clause here

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:47:26
   |
LL | #[rustc_on_unimplemented(on = "x", message = "y")]
   |                          ^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:54:40
   |
LL | #[rustc_on_unimplemented(on(desugared, on(desugared, message = "x")), message = "y")]
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error[E0232]: invalid `on`-clause in `#[rustc_on_unimplemented]`
  --> $DIR/bad-annotation.rs:59:26
   |
LL | #[rustc_on_unimplemented(on("y", message = "y"))]
   |                          ^^^^^^^^^^^^^^^^^^^^^^ invalid on-clause here

error[E0536]: expected 1 cfg-pattern
  --> $DIR/bad-annotation.rs:63:29
   |
LL | #[rustc_on_unimplemented(on(not(a, b), message = "y"))]
   |                             ^^^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/bad-annotation.rs:67:29
   |
LL | #[rustc_on_unimplemented(on(thing::What, message = "y"))]
   |                             ^^^^^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/bad-annotation.rs:71:29
   |
LL | #[rustc_on_unimplemented(on(thing::What = "value", message = "y"))]
   |                             ^^^^^^^^^^^

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0230, E0231, E0232, E0536.
For more information about an error, try `rustc --explain E0230`.
